fixed footer angle gap, locations links, text-image image angle, contact form title size

--- a/resources/assets/styles/components/_forms.scss
+++ b/resources/assets/styles/components/_forms.scss
@@ -155,6 +155,14 @@
 
 @media screen and (max-width: 767px) {
   .formBlock {
+    padding: 3rem 10% 1rem 10% !important;
+
+    .formHeader {
+      h2 {
+        font-size: 2em !important;
+      }
+    }
+
     .phoneNum,
     .city,
     .service {
