--- a/resources/assets/styles/components/_locations.scss
+++ b/resources/assets/styles/components/_locations.scss
@@ -1,5 +1,9 @@
 .locations {
-  margin-bottom: 0%;
+  margin-bottom: -10px;
+
+  h2 {
+    z-index: 2;
+  }
 
   .locationBg {
     height: 85%;
