--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -27,15 +27,15 @@ footer {
     }
 
     .footer-col-2 {
-      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f>div>div>div>a {
+      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f > div > div > div > a {
         display: none !important;
       }
 
-      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f>div>div>div>div.CommonLayout__ItemsContainer-d1flxf-0.ANSkS>div>div.LoadMoreButton__Container-sc-5z801y-0.kRNwud.GridLayout__StyledLoadMoreButton-sc-1onsl0h-1.dQgjRq {
+      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f > div > div > div > div.CommonLayout__ItemsContainer-d1flxf-0.ANSkS > div > div.LoadMoreButton__Container-sc-5z801y-0.kRNwud.GridLayout__StyledLoadMoreButton-sc-1onsl0h-1.dQgjRq {
         display: none !important;
       }
 
-      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f>div>div>div>div.CommonLayout__ItemsContainer-d1flxf-0.ANSkS>div>div.Grid__GridContainer-zyt552-0.dMzVXB>div>a>div.Classic__HeadingInfo-sc-19u56uy-2.gtQJhW>div.Classic__AuthorName-sc-19u56uy-4.dGLgMa {
+      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f > div > div > div > div.CommonLayout__ItemsContainer-d1flxf-0.ANSkS > div > div.Grid__GridContainer-zyt552-0.dMzVXB > div > a > div.Classic__HeadingInfo-sc-19u56uy-2.gtQJhW > div.Classic__AuthorName-sc-19u56uy-4.dGLgMa {
         text-align: left !important;
       }
     }
@@ -78,9 +78,10 @@ footer {
           background-color: #f0f0f0;
           content: "";
           height: 120px;
-          width: 50%;
+          width: 51%;
           position: absolute;
           top: -65%;
+          left: 0;
           transform: skewY(-5deg);
         }
       }
@@ -92,9 +93,10 @@ footer {
           background-color: #f0f0f0;
           content: "";
           height: 120px;
-          width: 50%;
+          width: 51%;
           position: absolute;
           top: -65%;
+          right: 0;
           transform: skewY(5deg);
         }
       }
